--- a/git_push.ipynb
+++ b/git_push.ipynb
@@ -9,21 +9,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "remote: Enumerating objects: 8, done.\u001b[K\n",
-      "remote: Counting objects: 100% (8/8), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (6/6), done.\u001b[K\n",
-      "remote: Total 6 (delta 4), reused 0 (delta 0), pack-reused 0\u001b[K\n",
-      "Unpacking objects: 100% (6/6), done.\n",
       "From https://github.com/loibucket/autobus\n",
-      " * branch            master     -> FETCH_HEAD\n",
-      "   a95dabd..323c4d2  master     -> origin/master\n"
+      " * branch            master     -> FETCH_HEAD\n"
      ]
     }
    ],
@@ -33,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -41,35 +35,23 @@
      "output_type": "stream",
      "text": [
       "On branch master\n",
-      "Your branch is behind 'origin/master' by 2 commits, and can be fast-forwarded.\n",
-      "  (use \"git pull\" to update your local branch)\n",
+      "Your branch is up to date with 'origin/master'.\n",
       "\n",
       "Changes not staged for commit:\n",
       "  (use \"git add/rm <file>...\" to update what will be committed)\n",
       "  (use \"git checkout -- <file>...\" to discard changes in working directory)\n",
       "\n",
-      "\t\u001b[31mmodified:   .gitignore\u001b[m\n",
-      "\t\u001b[31mdeleted:    collision_avoidance/collision_avoidance_dataset.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    combined_code/missing_files.md\u001b[m\n",
-      "\t\u001b[31mmodified:   git_push.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/live_demo-DGMD--20200729.html\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/live_demo-DGMD--PoolTable1.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/live_demo-DGMD--PoolTable2.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/live_demo-DGMD--TileFloor.ipynb\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-20_17-58-24--OrangeExtCord.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-27_19-43-48--BlueTapeFloor.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-29_18-01-35--BlueTapePoolTblDay.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-29_19-49-21--BlueTapePoolDusk.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-29_22-59-30--BlueTapePoolNight.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-30_11-32-11--BlueTapePoolMorning.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/__archives__/road_following_dataset_xy_2020-07-30_17-25-57--PoolTable300.zip\u001b[m\n",
-      "\t\u001b[31mdeleted:    rail_following_waveshare/road_following_dataset_xy_2020-08-01_14-09-42--PoolTable400.zip\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/autobus_live--Seeed-Waveshare-steer-obstacle-colors-Copy1.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/autobus_live--Waveshare-steer-obstacle-colors-Copy1.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/autobus_live--Waveshare-steer-obstacle-colors.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/autobus_live--Waveshare-steer-obstacle.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/autobus_live--Waveshare.ipynb\u001b[m\n",
+      "\t\u001b[31mdeleted:    combined_code/_previous_versions_/pseudocode_algo.ipynb\u001b[m\n",
       "\n",
       "Untracked files:\n",
       "  (use \"git add <file>...\" to include in what will be committed)\n",
       "\n",
-      "\t\u001b[31mcombined_code/large_files.md\u001b[m\n",
-      "\t\u001b[31mtraining_data/\u001b[m\n",
+      "\t\u001b[31mcombined_code/__previous_versions/\u001b[m\n",
       "\n",
       "no changes added to commit (use \"git add\" and/or \"git commit -a\")\n"
      ]
@@ -81,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,76 +72,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[master a95dabd] camera fix\n",
-      " 4 files changed, 34 insertions(+), 15 deletions(-)\n",
-      " rename Camera_overrides.tar.gz => camera_fix/Camera_overrides.tar.gz (100%)\n",
-      " rename camera_overrides.isp => camera_fix/camera_overrides.isp (100%)\n",
-      " create mode 100644 camera_fix/fix_camera_tint.md\n"
+      "[master 5c12914] training data\n",
+      " 6 files changed, 0 insertions(+), 0 deletions(-)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/autobus_live--Seeed-Waveshare-steer-obstacle-colors-Copy1.ipynb (100%)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/autobus_live--Waveshare-steer-obstacle-colors-Copy1.ipynb (100%)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/autobus_live--Waveshare-steer-obstacle-colors.ipynb (100%)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/autobus_live--Waveshare-steer-obstacle.ipynb (100%)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/autobus_live--Waveshare.ipynb (100%)\n",
+      " rename combined_code/{_previous_versions_ => __previous_versions}/pseudocode_algo.ipynb (100%)\n"
      ]
     }
    ],
    "source": [
-    "!git commit -m \"camera fix\""
+    "!git commit -m \"training data\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Counting objects: 5, done.\n",
+      "Counting objects: 3, done.\n",
       "Delta compression using up to 4 threads.\n",
-      "Compressing objects: 100% (5/5), done.\n",
-      "Writing objects: 100% (5/5), 1.09 KiB | 1.09 MiB/s, done.\n",
-      "Total 5 (delta 2), reused 0 (delta 0)\n",
+      "Compressing objects: 100% (3/3), done.\n",
+      "Writing objects: 100% (3/3), 306 bytes | 306.00 KiB/s, done.\n",
+      "Total 3 (delta 2), reused 0 (delta 0)\n",
       "remote: Resolving deltas: 100% (2/2), completed with 2 local objects.\u001b[K\n",
       "To https://github.com/loibucket/autobus\n",
-      "   672a83b..a95dabd  master -> master\n"
+      "   b0ab56e..5c12914  master -> master\n"
      ]
     }
    ],
    "source": [
     "!git push origin master"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
